@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- FortrezZ WV-01 Automated Water Shut-Off Valve -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="list" index="0" genre="config" label="Mode" size="1" min="0" max="255" value="0">
+            <Help>
+            </Help>
+            <Item label="Water Alarm" value="0"/>
+            <Item label="Water Level" value="255"/>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="1" label="Water Level timeout" units="minutes" min="0" max="32767" value="60">
+            <Help></Help>
+        </Value>
+    </CommandClass>
+</Product>
