@@ -108,6 +108,7 @@ Version 1.5
  - Add Zipato PH-PAB01.eu Micromodule Energy Meter (Nechry)
  - Add Zipato MH-P210 Mini Energy Dimmer, Mcohome branded (Nechry)
  - Add WiDom WDS Universal Double Switch (Nechry)
+ - Add FortrezZ WV-01 Automated Water Shut-Off Valve (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
